added package for organization, worked a bit on database

--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,9 @@
 .~lock.*
 cd.txt
 .gitignore
+RWS.egg-info/
 data/
+databases/__pycache__/
+server/__pycache__/
+station/__pycache__/
 server/cd.txt
