--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ dependencies = [
 requires-python = ">=3.12"
 
 [project.scripts]
-driver = "driver.__main__:main"
+rws = "driver.__main__:main"
 
 [tool.setuptools]
 packages = ["station", "databases", "server", "driver"]
