--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,10 @@ dependencies = [
     "plotly",
     "setuptools",
     "html5validator",
-    "w1thermsensor"
+    "w1thermsensor",
+    "smbus",
+    "tqdm",
+    "matplotlib"
 ]
 requires-python = ">=3.9"
 
